# DesignLaboratoryProject

./: CMakeLists.txt  README.md  VMA430_GPS.cpp  VMA430_GPS.h  arduino_gps.ino  dist_calc.hpp  eeprom_handler.hpp  epdpaint.cpp  epdpaint.h  main.c  quick-setup.sh  specyfikacja.md
lib/: CMakeLists.txt  bluetoothHandler.cpp  ep_display.cpp  gpsHandler.cpp
